--- a/frontend/src/index.css
+++ b/frontend/src/index.css
@@ -1,8 +1,7 @@
-/* These must be at the top */
-@import "tailwindcss";
 @import url('https://fonts.googleapis.com/css2?family=Poppins&family=Roboto:ital,wght@0,100;0,300;0,400;0,500;0,700;0,900;1,100;1,300;1,400;1,500;1,700;1,900&family=Ubuntu:ital@0;1&family=Urbanist:ital,wght@0,100..900;1,100..900&display=swap');
+@import "tailwindcss";
 @import "tw-animate-css";
-@import 'highlight.js/styles/github.css'; /* or stackoverflow-light.css for exact match */
+@import 'highlight.js/styles/github.css';
 @custom-variant dark (&:is(.dark *));
 
 
